--- a/static/css/landing.css
+++ b/static/css/landing.css
@@ -76,15 +76,6 @@ body {
     text-shadow: 1px 2px 1px rgba(0, 0, 0, .6);
   }
 
-  h1:after {
-    display: block;
-    color: #fff;
-    letter-spacing: 1px;
-    font-family: 'Poiret One', sans-serif;
-    content: 'Subtitle goes here';
-    font-size: .4em;
-    text-align: center;
-  }
 
   .button-line {
     font-family: 'Open Sans', sans-serif;
@@ -93,7 +84,7 @@ body {
     background: transparent;
     border: 1px solid #fff;
     color: #fff;
-    text-align: center;
+    text-align: left;
     font-size: 1.4em;
     opacity: .8;
     padding: 20px 40px;
