--- a/templates/landing.html
+++ b/templates/landing.html
@@ -1,7 +1,10 @@
+<head>
+  <link rel='stylesheet' href="{{ url_for('static', filename='css/landing.css') }}" type='text/css'>
+</head>
 <div class="full-screen">
   <div>
-    <h1>Landing Page</h1>
+    <h1>Welcome to News Scraper!</h1>
     <br>
-    <a class="button-line" href="#!">More</a>
+    <a class="button-line" href="#!">Subscribe</a>
   </div>
 </div>
