--- a/static/css/landing.css
+++ b/static/css/landing.css
@@ -84,7 +84,7 @@ body {
     background: transparent;
     border: 1px solid #fff;
     color: #fff;
-    text-align: left;
+    text-align: center;
     font-size: 1.4em;
     opacity: .8;
     padding: 20px 40px;
@@ -92,7 +92,7 @@ body {
     transition: all .5s ease;
     margin: 0 auto;
     display: block;
-    width: 100px;
+    width: 150px;
   }
 
   .button-line:hover {
