--- a/templates/landing.html
+++ b/templates/landing.html
@@ -1,5 +1,5 @@
 <head>
-  <link rel='stylesheet' href="/static/css/landing.css" type='text/css'>
+  <link rel='stylesheet' href="/static/css/main.css" type='text/css'>
 </head>
 <div class="full-screen">
   <div>
