--- a/templates/subscribe.html
+++ b/templates/subscribe.html
@@ -1,6 +1,6 @@
 <head>
-  <link rel='stylesheet' href="/static/css/subscribe.css" type='text/css'>
+  <link rel='stylesheet' href="/static/css/main.css" type='text/css'>
 </head>
 <div class="full-screen">
-  
+
 </div>
