Add link to subscribe page

--- a/templates/landing.html
+++ b/templates/landing.html
@@ -5,6 +5,6 @@
   <div>
     <h1>Welcome to News Scraper!</h1>
     <br>
-    <a class="button-line" href="#!">Subscribe</a>
+    <a class="button-line" href="/subscribe">Subscribe</a>
   </div>
 </div>
