--- a/templates/subscribe.html
+++ b/templates/subscribe.html
@@ -2,5 +2,7 @@
   <link rel='stylesheet' href="/static/css/main.css" type='text/css'>
 </head>
 <div class="full-screen">
+  <form method='POST' action=''>
 
+  </form>  
 </div>
