--- a/templates/subscribe.html
+++ b/templates/subscribe.html
@@ -4,5 +4,18 @@
 <div class="full-screen">
   <form method='POST' action=''>
     {{ form.hidden_tag() }}
+    <fieldset>
+      <legend>
+        Enter your email address and any links you would like to follow separated be commas.
+      </legend>
+      <div>
+        {{ form.email.label }}
+        {{ from.email }}
+      </div>
+      <div>
+        {{ form.links.label }}
+        {{ from.links }}
+      </div>
+    </fieldset>
   </form>
 </div>
