--- a/templates/subscribe.html
+++ b/templates/subscribe.html
@@ -10,11 +10,11 @@
       </legend>
       <div>
         {{ form.email.label }}
-        {{ from.email }}
+        {{ form.email }}
       </div>
       <div>
         {{ form.links.label }}
-        {{ from.links }}
+        {{ form.links }}
       </div>
     </fieldset>
   </form>
