Add submit button

--- a/templates/subscribe.html
+++ b/templates/subscribe.html
@@ -17,5 +17,8 @@
         {{ form.links }}
       </div>
     </fieldset>
+    <div class="">
+      {{ form.submit }}
+    </div>
   </form>
 </div>
