Add styling to submit button

--- a/templates/subscribe.html
+++ b/templates/subscribe.html
@@ -17,8 +17,8 @@
         {{ form.links }}
       </div>
     </fieldset>
-    <div class="">
-      {{ form.submit }}
+    <div>
+      {{ form.submit(class_='button-line', id='submit-button') }}
     </div>
   </form>
 </div>
