--- a/static/css/main.css
+++ b/static/css/main.css
@@ -99,6 +99,68 @@ body {
     opacity: 1;
   }
 
-  #submit-button {
+  input {
+  border: none;
+  font-family: 'Open Sans', Arial, sans-serif;
+  font-size: 16px;
+  line-height: 1.5em;
+  padding: 0;
+  -webkit-appearance: none;
+}
+
+p {
+  line-height: 1.5em;
+}
+
+after { clear: both; }
+
+#sub-form {
+  margin: 50px auto;
+  width: 320px;
+}
+
+#sub-form form {
+  margin: auto;
+  padding: 22px 22px 22px 22px;
+  width: 100%;
+  border-radius: 5px;
+  background: #282e33;
+  border-top: 3px solid #434a52;
+  border-bottom: 3px solid #434a52;
+}
+
+#sub-form form span {
+  background-color: #363b41;
+  border-radius: 3px 0px 0px 3px;
+  border-right: 3px solid #434a52;
+  color: #606468;
+  display: block;
+  float: left;
+  line-height: 50px;
+  text-align: center;
+  width: 50px;
+  height: 50px;
+}
+
+#sub-form form input[type="text"] {
+  background-color: #3b4148;
+  border-radius: 0px 3px 3px 0px;
+  color: #a9a9a9;
+  margin-bottom: 10px;
+  padding: 0 16px;
+  width: 235px;
+  height: 50px;
+}
+
+#button-div {
+  margin-top: 10px;
+}
+
+
+#submit-button {
     font-size: 0.5em;
   }
+
+.formfield {
+  margin-top: 10px;
+}
