--- a/templates/subscribe.html
+++ b/templates/subscribe.html
@@ -6,7 +6,7 @@
     {{ form.hidden_tag() }}
     <fieldset>
       <legend>
-        Enter your email address and any links you would like to follow separated be commas.
+        Enter your email address and any links you would like to follow separated by commas.
       </legend>
       <div class='formfield'>
         {{ form.email.label }}
