Add layout file to other templates

--- a/templates/landing.html
+++ b/templates/landing.html
@@ -1,6 +1,5 @@
-<head>
-  <link rel='stylesheet' href="/static/css/main.css" type='text/css'>
-</head>
+{% extends 'layout.html' %}
+{% block body %}
 <div class="full-screen">
   <div>
     <h1>Welcome to News Scraper!</h1>
@@ -8,3 +7,4 @@
     <a class="button-line" href="/subscribe">Subscribe</a>
   </div>
 </div>
+{% endblock %}
