--- a/templates/subscribe.html
+++ b/templates/subscribe.html
@@ -1,6 +1,5 @@
-<head>
-  <link rel='stylesheet' href="/static/css/main.css" type='text/css'>
-</head>
+{% extends 'layout.html' %}
+{% block body %}
 <div class="full-screen">
   <span id='sub-form'>
   <form method='POST' action='' >
@@ -22,3 +21,4 @@
   </form>
   </span>
 </div>
+{% endblock %}
