--- a/templates/mail_templates/daily_articles.html
+++ b/templates/mail_templates/daily_articles.html
@@ -1,4 +1,4 @@
 <!DOCTYPE html>
 {% for article in articles %}
-  <p>{% article.headline %}</p>
-{% endfor %}  
+  <p>{{ article.headline }}</p>
+{% endfor %}
