Add outline for card

--- a/templates/mail_templates/daily_articles.html
+++ b/templates/mail_templates/daily_articles.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
 {% for article in articles %}
-  <p>{{ article.headline }}</p>
+  <div>
+    <p>{{ article.headline }}</p>
+  </div>  
 {% endfor %}
