Add email placeholder

--- a/templates/subscribe.html
+++ b/templates/subscribe.html
@@ -9,7 +9,7 @@
       </legend>
       <div class='formfield'>
         {{ form.email.label }}
-        {{ form.email }}
+        {{ form.email(placeholder='email@example.com') }}
       </div>
       <div class='formfield'>
         {{ form.links.label }}
