--- a/templates/mail_templates/daily_articles.html
+++ b/templates/mail_templates/daily_articles.html
@@ -2,7 +2,7 @@
 <p>Hello! Here's your daily newsletter:</p>
 {% for article in articles %}
   <div>
-    <h6 style='margin-bottom: 2px;'>{{ article.link.url }}</h6>
+    <h6>{{ article.link.url }}</h6>
     <a href="{{ article.url }}">
       <h3>{{ article.headline }}</h3>
     </a>
