--- a/templates/mail_templates/daily_articles.html
+++ b/templates/mail_templates/daily_articles.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <p>Hello! Here's your daily newsletter:</p>
 {% for article in articles %}
-  <div>
+  <div style='margin-bottom: 10px;'>
     <a href="{{ article.url }}">
       <h3>{{ article.headline }}</h3>
     </a>
