--- a/templates/mail_templates/daily_articles.html
+++ b/templates/mail_templates/daily_articles.html
@@ -5,7 +5,7 @@
     <a href="{{ article.url }}">
       <h3>{{ article.headline }}</h3>
     </a>
-    <h6>{{ article.link.url }}</h6>
+    <p>{{ article.link.url }}</p>
   </div>
 {% endfor %}
 <p>Click <a href='#'>here</a> to unsubscribe</p>
