--- a/templates/mail_templates/daily_articles.html
+++ b/templates/mail_templates/daily_articles.html
@@ -2,7 +2,7 @@
 <p>Hello! Here's your daily newsletter:</p>
 {% for article in articles %}
   <div style='margin-bottom: 10px;'>
-    <a href="{{ article.url }}">
+    <a href="{{ article.url }}" style='margin-bottom:2px;'>
       <h3>{{ article.headline }}</h3>
     </a>
     <p>{{ article.link.url }}</p>
