Update font size for headline

--- a/templates/mail_templates/daily_articles.html
+++ b/templates/mail_templates/daily_articles.html
@@ -3,7 +3,7 @@
 {% for article in articles %}
   <div style='padding-bottom: 20px;'>
     <a href="{{ article.url }}" style='margin-bottom:2px;'>
-      <h3>{{ article.headline }}</h3>
+      <p style='font-size: 25px;'>{{ article.headline }}</p>
     </a>
     <p>{{ article.link.url }}</p>
   </div>
