Change font size for url

--- a/templates/mail_templates/daily_articles.html
+++ b/templates/mail_templates/daily_articles.html
@@ -5,7 +5,7 @@
     <a href="{{ article.url }}" style='margin-bottom:2px;'>
       <p style='font-size: 25px;'>{{ article.headline }}</p>
     </a>
-    <p>{{ article.link.url }}</p>
+    <p style='font-size: 10px;'>{{ article.link.url }}</p>
   </div>
 {% endfor %}
 <p>Click <a href='#'>here</a> to unsubscribe</p>
