--- a/static/css/main.css
+++ b/static/css/main.css
@@ -66,7 +66,7 @@ body {
     text-align: center;
   }
 
-  h1 h6 {
+  h1 {
     color: #fff;
     font-family: 'Open Sans', sans-serif;
     font-weight: 800;
