Add unsubscibe link

--- a/templates/mail_templates/daily_articles.html
+++ b/templates/mail_templates/daily_articles.html
@@ -8,4 +8,4 @@
     <p style='font-size: 10px;'>{{ article.link.url }}</p>
   </div>
 {% endfor %}
-<p>Click <a href='#'>here</a> to unsubscribe</p>
+<p>Click <a href='https://www.news-scraper.com/unsubscribe?token={{ uid }}'>here</a> to unsubscribe</p>
