--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,4 +1,32 @@
 {% extends 'layout.html' %}
 {% block body %}
-
+<div class="full-screen">
+  <span id='sub-form'>
+  <form method='POST' action='' >
+    {{ form.hidden_tag() }}
+      <legend>
+        Enter your email address and any links you would like to follow separated by commas.
+      </legend>
+      <div class='formfield'>
+        {{ form.email.label }}
+        {{ form.email(placeholder='email@example.com') }}
+      </div>
+      <div class='formfield'>
+        {{ form.links.label }}
+        {{ form.links(placeholder='https://www.example.com/news,http://www.news.org, etc.') }}
+      </div>
+      <div class='formfield'>
+        {{ form.links.label }}
+        {{ form.links(placeholder='https://www.example.com/news,http://www.news.org, etc.') }}
+      </div>
+      <div class='formfield'>
+        {{ form.filters.label }}
+        {{ form.filters }}
+      </div>
+      <div id='button-div'>
+        {{ form.submit(class_='button-line', id='submit-button') }}
+      </div>
+  </form>
+  </span>
+</div>
 {% endblock %}
