--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -5,7 +5,7 @@
   <form method='POST' action='' >
     {{ form.hidden_tag() }}
       <legend>
-        Enter your email address and any links you would like to follow separated by commas.
+        Update the values in this form to change your email address and subscription preferences.
       </legend>
       <div class='formfield'>
         {{ form.email.label }}
