--- a/templates/mail_templates/daily_articles.html
+++ b/templates/mail_templates/daily_articles.html
@@ -8,4 +8,5 @@
     <p style='font-size: 10px;'>{{ article.link.url }}</p>
   </div>
 {% endfor %}
-<p>Click <a href='https://www.news-scraper.com/unsubscribe?token={{ uid }}'>here</a> to unsubscribe</p>
+<p><a href='https://www.news-scraper.com/dashboard?token={{ uid }}'>Update your subscription preferences</a></p>
+<p><a href='https://www.news-scraper.com/unsubscribe?token={{ uid }}'>Unsubscribe from News Scraper</a></p>
