Add missing parenthesis

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -21,7 +21,7 @@
       </div>
       <div class='formfield'>
         {{ form.filters.label }}
-        {{ form.filters(placeholder='coronavirus,trump, etc.' }}
+        {{ form.filters(placeholder='coronavirus,trump, etc.') }}
       </div>
       <div id='button-div'>
         {{ form.submit(class_='button-line', id='submit-button') }}
