--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -24,7 +24,7 @@
         {{ form.filters(placeholder='coronavirus,trump, etc.') }}
       </div>
       <div id='button-div'>
-        {{ form.submit(class_='button-line', id='submit-button') }}
+        {{ form.update(class_='button-line', id='submit-button') }}
       </div>
   </form>
   </span>
