--- a/templates/mail_templates/daily_articles.html
+++ b/templates/mail_templates/daily_articles.html
@@ -5,7 +5,7 @@
     <a href="{{ article.url }}" style='margin-bottom:2px;'>
       <p style='font-size: 25px;'>{{ article.headline }}</p>
     </a>
-    <p style='font-size: 10px;'>{{ article.link.url }}</p>
+    <p style='font-size: 10px;'>{{ article.news_site }}</p>
   </div>
 {% endfor %}
 <p><a href='https://www.news-scraper.com/dashboard?token={{ uid }}'>Update your subscription preferences</a></p>
