--- a/templates/mail_templates/confirmation.html
+++ b/templates/mail_templates/confirmation.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <p>Hello!</p>
-<p>Welcome to news scraper! To confirm your email, please click <a href="https://www.news-scraper.com/confirm?token={{ uid }}"><strong>here</strong></a>.</p>
-<p>If you did not subscribe to this service, please disregard this email</p>
+<p>Welcome to news scraper! To confirm your subscription, please click <a href="https://www.news-scraper.com/confirm?token={{ uid }}"><strong>here</strong></a>.</p>
+<p>If you did not subscribe to this service, please disregard this email.</p>
 <p>Sincerely,</p>
 <p>News Scraper</p>
